--- a/src/Components/temp.css
+++ b/src/Components/temp.css
@@ -38,7 +38,8 @@ body {
   border-radius: 20px;
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
     0 17px 17px 0 rgba(0, 0, 0, 0.15);
-}
+  cursor: auto;  
+  }
 .widget .weatherIcon {
   flex: 1 100%;
   height: 50%;
@@ -179,7 +180,7 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-top: -150px;
+  /* margin-top: -150px; */
   margin-bottom: 50px;
 }
 
