--- a/src/Components/temp.css
+++ b/src/Components/temp.css
@@ -21,8 +21,9 @@
 }
 
 body {
-  background-color: #f5f5f5;
-  background: var(--color-dark);
+  
+  /* background: var(--color-dark); */
+  background-color: #4c5083;
   height: 100vh;
   min-height: 100vh;
   display: grid;
